libcir/c-api/CIRCApi.h

//===----------------------------------------------------------------------===//
// Dialect Registration
//===----------------------------------------------------------------------===//

/// Register the CIR dialect with an MLIR context.
void cirRegisterDialect(MlirContext ctx);
//===----------------------------------------------------------------------===//
// Source Locations
//===----------------------------------------------------------------------===//

/// Create a file:line:col source location.
/// Every CIR op should carry a source location for error messages.
MlirLocation cirLocationFileLineCol(MlirContext ctx,
                                     MlirStringRef filename,
                                     unsigned line,
                                     unsigned col);
//===----------------------------------------------------------------------===//
// Aggregates — Structs
//===----------------------------------------------------------------------===//

/// Create cir.struct_init from field values.
MlirValue cirBuildStructInit(MlirBlock block, MlirLocation loc,
                             MlirType structType,
                             intptr_t nFields, MlirValue *fields);
/// Create cir.field_val (extract field from struct value).
MlirValue cirBuildFieldVal(MlirBlock block, MlirLocation loc,
                           MlirType resultType, MlirValue input,
                           int64_t fieldIndex);
/// Create cir.field_ptr (pointer to struct field).
MlirValue cirBuildFieldPtr(MlirBlock block, MlirLocation loc,
                           MlirValue base, int64_t fieldIndex,
                           MlirType elemType);
//===----------------------------------------------------------------------===//
// Aggregates — Arrays
//===----------------------------------------------------------------------===//

/// Create cir.array_init from element values.
MlirValue cirBuildArrayInit(MlirBlock block, MlirLocation loc,
                            MlirType arrayType,
                            intptr_t nElements, MlirValue *elements);
/// Create cir.elem_val (extract element by constant index).
MlirValue cirBuildElemVal(MlirBlock block, MlirLocation loc,
                          MlirType resultType, MlirValue input,
                          int64_t index);
/// Create cir.elem_ptr (pointer to array element by dynamic index).
MlirValue cirBuildElemPtr(MlirBlock block, MlirLocation loc,
                          MlirValue base, MlirValue index,
                          MlirType elemType);
//===----------------------------------------------------------------------===//
// Control Flow
//===----------------------------------------------------------------------===//

/// Create cir.br (unconditional branch).
void cirBuildBr(MlirBlock block, MlirLocation loc,
                MlirBlock dest,
                intptr_t nArgs, MlirValue *args);
/// Create cir.condbr (conditional branch).
void cirBuildCondBr(MlirBlock block, MlirLocation loc,
                    MlirValue condition,
                    MlirBlock trueDest, MlirBlock falseDest);
/// Create cir.trap (abort).
void cirBuildTrap(MlirBlock block, MlirLocation loc);
//===----------------------------------------------------------------------===//
// Slice Operations
//===----------------------------------------------------------------------===//

/// Create cir.slice_ptr (extract pointer from slice). Returns !cir.ptr.
MlirValue cirBuildSlicePtr(MlirBlock block, MlirLocation loc,
                           MlirValue slice);
/// Create cir.slice_len (extract length from slice). Returns i64.
MlirValue cirBuildSliceLen(MlirBlock block, MlirLocation loc,
                           MlirValue slice);
/// Create cir.slice_elem (index into slice, unchecked). Returns element type.
MlirValue cirBuildSliceElem(MlirBlock block, MlirLocation loc,
                            MlirType elemType, MlirValue slice,
                            MlirValue index);
//===----------------------------------------------------------------------===//
// Optional Type + Operations
//===----------------------------------------------------------------------===//

/// Get !cir.optional<T> type.
MlirType cirOptionalTypeGet(MlirContext ctx, MlirType payloadType);
/// Check if a type is !cir.optional<T>.
bool cirTypeIsOptional(MlirType type);
/// Get payload type from !cir.optional<T>.
MlirType cirOptionalTypeGetPayload(MlirType optType);
/// Create cir.none (null optional).
MlirValue cirBuildNone(MlirBlock block, MlirLocation loc,
                       MlirType optionalType);
/// Create cir.wrap_optional (T → ?T).
MlirValue cirBuildWrapOptional(MlirBlock block, MlirLocation loc,
                               MlirType optionalType, MlirValue value);
/// Create cir.is_non_null (?T → i1).
MlirValue cirBuildIsNonNull(MlirBlock block, MlirLocation loc,
                            MlirValue optional);
/// Create cir.optional_payload (?T → T, unchecked).
MlirValue cirBuildOptionalPayload(MlirBlock block, MlirLocation loc,
                                  MlirType payloadType, MlirValue optional);
//===----------------------------------------------------------------------===//
// Generic Types + Operations
//===----------------------------------------------------------------------===//

/// Get !cir.type_param<"T"> type.
MlirType cirTypeParamGet(MlirContext ctx, MlirStringRef name);
/// Check if a type is !cir.type_param<...>.
bool cirTypeIsTypeParam(MlirType type);
/// Create cir.generic_apply (call generic function with type substitutions).
MlirValue cirBuildGenericApply(MlirBlock block, MlirLocation loc,
                               MlirStringRef callee,
                               intptr_t nOperands, MlirValue *operands,
                               MlirType resultType,
                               intptr_t nSubs,
                               MlirStringRef *subsKeys,
                               MlirType *subsTypes);
//===----------------------------------------------------------------------===//
// Tagged Union Type + Operations
//===----------------------------------------------------------------------===//

/// Get !cir.tagged_union<"Name", variant: type, ...> type.
MlirType cirTaggedUnionTypeGet(MlirContext ctx, MlirStringRef name,
                                intptr_t nVariants,
                                MlirStringRef *variantNames,
                                MlirType *variantTypes);
/// Check if a type is !cir.tagged_union<...>.
bool cirTypeIsTaggedUnion(MlirType type);
/// Create cir.union_init (construct tagged union with variant + payload).
MlirValue cirBuildUnionInit(MlirBlock block, MlirLocation loc,
                            MlirType unionType, MlirStringRef variant,
                            MlirValue payload);
/// Create cir.union_init with no payload.
MlirValue cirBuildUnionInitVoid(MlirBlock block, MlirLocation loc,
                                MlirType unionType, MlirStringRef variant);
/// Create cir.union_tag (extract i8 tag from tagged union).
MlirValue cirBuildUnionTag(MlirBlock block, MlirLocation loc,
                           MlirValue unionVal);
/// Create cir.union_payload (extract payload from tagged union, unchecked).
MlirValue cirBuildUnionPayload(MlirBlock block, MlirLocation loc,
                               MlirType payloadType, MlirStringRef variant,
                               MlirValue unionVal);
//===----------------------------------------------------------------------===//
// Switch
//===----------------------------------------------------------------------===//

/// Create cir.switch (integer multi-way branch).
void cirBuildSwitch(MlirBlock block, MlirLocation loc,
                    MlirValue value,
                    intptr_t nCases, int64_t *caseValues,
                    MlirBlock *caseDests,
                    MlirBlock defaultDest);
//===----------------------------------------------------------------------===//
// Enum Type + Operations
//===----------------------------------------------------------------------===//

/// Get !cir.enum<"Name", TagType, ...> type.
MlirType cirEnumTypeGet(MlirContext ctx, MlirStringRef name,
                        MlirType tagType,
                        intptr_t nVariants,
                        MlirStringRef *variantNames,
                        int64_t *variantValues);
/// Check if a type is !cir.enum<...>.
bool cirTypeIsEnum(MlirType type);
/// Get tag type from !cir.enum<...>.
MlirType cirEnumTypeGetTagType(MlirType enumType);
/// Get variant value by name. Returns -1 if not found.
int64_t cirEnumTypeGetVariantValue(MlirType enumType, MlirStringRef name);
/// Create cir.enum_constant (construct enum value by variant name).
MlirValue cirBuildEnumConstant(MlirBlock block, MlirLocation loc,
                               MlirType enumType, MlirStringRef variant);
/// Create cir.enum_value (extract integer from enum).
MlirValue cirBuildEnumValue(MlirBlock block, MlirLocation loc,
                            MlirType tagType, MlirValue enumVal);
//===----------------------------------------------------------------------===//
// Error Union Type + Operations
//===----------------------------------------------------------------------===//

/// Get !cir.error_union<T> type.
MlirType cirErrorUnionTypeGet(MlirContext ctx, MlirType payloadType);
/// Check if a type is !cir.error_union<T>.
bool cirTypeIsErrorUnion(MlirType type);
/// Get payload type from !cir.error_union<T>.
MlirType cirErrorUnionTypeGetPayload(MlirType euType);
/// Create cir.wrap_result (T → E!T, success case).
MlirValue cirBuildWrapResult(MlirBlock block, MlirLocation loc,
                             MlirType errorUnionType, MlirValue value);
/// Create cir.wrap_error (i16 → E!T, error case).
MlirValue cirBuildWrapError(MlirBlock block, MlirLocation loc,
                            MlirType errorUnionType, MlirValue errorCode);
/// Create cir.is_error (E!T → i1).
MlirValue cirBuildIsError(MlirBlock block, MlirLocation loc,
                          MlirValue errorUnion);
/// Create cir.error_payload (E!T → T, unchecked).
MlirValue cirBuildErrorPayload(MlirBlock block, MlirLocation loc,
                               MlirType payloadType, MlirValue errorUnion);
/// Create cir.error_code (E!T → i16).
MlirValue cirBuildErrorCode(MlirBlock block, MlirLocation loc,
                            MlirValue errorUnion);
//===----------------------------------------------------------------------===//
// Exception-Based Error Handling
//===----------------------------------------------------------------------===//

/// Create cir.throw (throw exception value).
void cirBuildThrow(MlirBlock block, MlirLocation loc, MlirValue value);
/// Create cir.invoke (call with normal/unwind successors).
/// Returns the call result (or null if void).
MlirValue cirBuildInvoke(MlirBlock block, MlirLocation loc,
                         MlirStringRef callee,
                         intptr_t nOperands, MlirValue *operands,
                         MlirType resultType,
                         MlirBlock normalDest, MlirBlock unwindDest);
/// Create cir.landingpad (catch exception value).
MlirValue cirBuildLandingPad(MlirBlock block, MlirLocation loc,
                             MlirType resultType);