libzc/mlir.zig


// Structs
pub extern "c" fn cirBuildStructInit(block: Block, loc: Location, ty: Type, n: isize, fields: [*]const Value) callconv(.c) Value;
pub extern "c" fn cirBuildFieldVal(block: Block, loc: Location, result: Type, input: Value, idx: i64) callconv(.c) Value;
pub extern "c" fn cirBuildFieldPtr(block: Block, loc: Location, base: Value, idx: i64, elem: Type) callconv(.c) Value;

// Arrays
pub extern "c" fn cirBuildArrayInit(block: Block, loc: Location, ty: Type, n: isize, elems: [*]const Value) callconv(.c) Value;
pub extern "c" fn cirBuildElemVal(block: Block, loc: Location, result: Type, input: Value, idx: i64) callconv(.c) Value;
pub extern "c" fn cirBuildElemPtr(block: Block, loc: Location, base: Value, idx: Value, elem: Type) callconv(.c) Value;

// Control flow
pub extern "c" fn cirBuildBr(block: Block, loc: Location, dest: Block, n: isize, args: [*]const Value) callconv(.c) void;
pub extern "c" fn cirBuildCondBr(block: Block, loc: Location, cond: Value, t: Block, f: Block) callconv(.c) void;
pub extern "c" fn cirBuildTrap(block: Block, loc: Location) callconv(.c) void;

// Optional type + ops
pub extern "c" fn cirOptionalTypeGet(ctx: Context, payload: Type) callconv(.c) Type;
pub extern "c" fn cirTypeIsOptional(ty: Type) callconv(.c) bool;
pub extern "c" fn cirOptionalTypeGetPayload(ty: Type) callconv(.c) Type;
pub extern "c" fn cirBuildNone(block: Block, loc: Location, ty: Type) callconv(.c) Value;
pub extern "c" fn cirBuildWrapOptional(block: Block, loc: Location, ty: Type, val: Value) callconv(.c) Value;
pub extern "c" fn cirBuildIsNonNull(block: Block, loc: Location, opt: Value) callconv(.c) Value;
pub extern "c" fn cirBuildOptionalPayload(block: Block, loc: Location, payload: Type, opt: Value) callconv(.c) Value;

// Slice ops
pub extern "c" fn cirBuildSlicePtr(block: Block, loc: Location, slice: Value) callconv(.c) Value;
pub extern "c" fn cirBuildSliceLen(block: Block, loc: Location, slice: Value) callconv(.c) Value;
pub extern "c" fn cirBuildSliceElem(block: Block, loc: Location, elem: Type, slice: Value, idx: Value) callconv(.c) Value;

// Error union type + ops
pub extern "c" fn cirErrorUnionTypeGet(ctx: Context, payload: Type) callconv(.c) Type;
pub extern "c" fn cirTypeIsErrorUnion(ty: Type) callconv(.c) bool;
pub extern "c" fn cirErrorUnionTypeGetPayload(ty: Type) callconv(.c) Type;
pub extern "c" fn cirBuildWrapResult(block: Block, loc: Location, euType: Type, value: Value) callconv(.c) Value;
pub extern "c" fn cirBuildWrapError(block: Block, loc: Location, euType: Type, errorCode: Value) callconv(.c) Value;
pub extern "c" fn cirBuildIsError(block: Block, loc: Location, errorUnion: Value) callconv(.c) Value;
pub extern "c" fn cirBuildErrorPayload(block: Block, loc: Location, payloadType: Type, errorUnion: Value) callconv(.c) Value;
pub extern "c" fn cirBuildErrorCode(block: Block, loc: Location, errorUnion: Value) callconv(.c) Value;

// Exception-based error handling
pub extern "c" fn cirBuildThrow(block: Block, loc: Location, value: Value) callconv(.c) void;
pub extern "c" fn cirBuildInvoke(block: Block, loc: Location, callee: StringRef, nOperands: isize, operands: [*]const Value, resultType: Type, normalDest: Block, unwindDest: Block) callconv(.c) Value;
pub extern "c" fn cirBuildLandingPad(block: Block, loc: Location, resultType: Type) callconv(.c) Value;

// Enum type + ops
pub extern "c" fn cirEnumTypeGet(ctx: Context, name: StringRef, tagType: Type, nVariants: isize, variantNames: [*]const StringRef, variantValues: [*]const i64) callconv(.c) Type;
pub extern "c" fn cirTypeIsEnum(ty: Type) callconv(.c) bool;
pub extern "c" fn cirEnumTypeGetTagType(enumType: Type) callconv(.c) Type;
pub extern "c" fn cirEnumTypeGetVariantValue(enumType: Type, name: StringRef) callconv(.c) i64;
pub extern "c" fn cirBuildEnumConstant(block: Block, loc: Location, enumType: Type, variant: StringRef) callconv(.c) Value;
pub extern "c" fn cirBuildEnumValue(block: Block, loc: Location, tagType: Type, enumVal: Value) callconv(.c) Value;

// Tagged union type + ops
pub extern "c" fn cirTaggedUnionTypeGet(ctx: Context, name: StringRef, nVariants: isize, variantNames: [*]const StringRef, variantTypes: [*]const Type) callconv(.c) Type;
pub extern "c" fn cirTypeIsTaggedUnion(ty: Type) callconv(.c) bool;
pub extern "c" fn cirBuildUnionInit(block: Block, loc: Location, unionType: Type, variant: StringRef, payload: Value) callconv(.c) Value;
pub extern "c" fn cirBuildUnionInitVoid(block: Block, loc: Location, unionType: Type, variant: StringRef) callconv(.c) Value;
pub extern "c" fn cirBuildUnionTag(block: Block, loc: Location, unionVal: Value) callconv(.c) Value;
pub extern "c" fn cirBuildUnionPayload(block: Block, loc: Location, payloadType: Type, variant: StringRef, unionVal: Value) callconv(.c) Value;

// Source Locations
pub extern "c" fn cirLocationFileLineCol(ctx: Context, filename: StringRef, line: c_uint, col: c_uint) callconv(.c) Location;

// Switch
pub extern "c" fn cirBuildSwitch(block: Block, loc: Location, value: Value, nCases: isize, caseValues: [*]const i64, caseDests: [*]const Block, defaultDest: Block) callconv(.c) void;

// Generic types + operations
pub extern "c" fn cirTypeParamGet(ctx: Context, name: StringRef) callconv(.c) Type;
pub extern "c" fn cirTypeIsTypeParam(ty: Type) callconv(.c) bool;
pub extern "c" fn cirBuildGenericApply(block: Block, loc: Location, callee: StringRef, nOperands: isize, operands: [*]const Value, resultType: Type, nSubs: isize, subsKeys: [*]const StringRef, subsTypes: [*]const Type) callconv(.c) Value;

// ============================================================
// Convenience API (ported from cot-failed/libzc/mlir.zig)
// ============================================================

pub fn createContext() Context {
    const ctx = mlirContextCreate();
    cirRegisterDialect(ctx);
    mlirContextSetAllowUnregisteredDialects(ctx, true);
    return ctx;
}

pub fn createModule(ctx: Context) Module {
    return mlirModuleCreateEmpty(mlirLocationUnknownGet(ctx));
}

pub fn serializeToBytecode(allocator: std.mem.Allocator, module: Module) ![]u8 {
    var buf: std.ArrayListUnmanaged(u8) = .empty;
    errdefer buf.deinit(allocator);
    const Ctx = struct {
        buf: *std.ArrayListUnmanaged(u8),
        alloc: std.mem.Allocator,
        fn callback(chunk: StringRef, user_data: ?*anyopaque) callconv(.c) void {
            const self: *@This() = @ptrCast(@alignCast(user_data.?));
            self.buf.appendSlice(self.alloc, chunk.toSlice()) catch {};
        }
    };
    var ctx = Ctx{ .buf = &buf, .alloc = allocator };
    const op = mlirModuleGetOperation(module);
    const config = mlirBytecodeWriterConfigCreate();
    defer mlirBytecodeWriterConfigDestroy(config);
    mlirBytecodeWriterConfigDesiredEmitVersion(config, 1);
    const result = mlirOperationWriteBytecodeWithConfig(op, config, Ctx.callback, @ptrCast(&ctx));
    if (!result.isSuccess()) {
        mlirOperationWriteBytecode(op, Ctx.callback, @ptrCast(&ctx));
    }
    return buf.toOwnedSlice(allocator);
}

/// CIR operation builder — ported from cot-failed/libzc/mlir.zig CirBuilder.
pub const Builder = struct {
    ctx: Context,
    loc: Location,

    pub fn init(ctx: Context) Builder {
        return .{ .ctx = ctx, .loc = mlirLocationUnknownGet(ctx) };
    }

    pub fn intType(self: Builder, bits: c_uint) Type { return mlirIntegerTypeGet(self.ctx, bits); }
    pub fn parseType(self: Builder, type_str: []const u8) Type {
        return mlirTypeParseGet(self.ctx, StringRef.fromSlice(type_str));
    }

    pub fn attr(self: Builder, name: []const u8, value: Attribute) NamedAttribute {
        return mlirNamedAttributeGet(mlirIdentifierGet(self.ctx, StringRef.fromSlice(name)), value);
    }
    pub fn intAttr(_: Builder, ty: Type, value: i64) Attribute { return mlirIntegerAttrGet(ty, value); }
    pub fn strAttr(self: Builder, value: []const u8) Attribute { return mlirStringAttrGet(self.ctx, StringRef.fromSlice(value)); }
    pub fn typeAttr(_: Builder, ty: Type) Attribute { return mlirTypeAttrGet(ty); }

    pub fn emit(self: Builder, block: Block, name: []const u8, result_types: []const Type, operands: []const Value, attrs: []const NamedAttribute) Value {
        var state = mlirOperationStateGet(StringRef.fromSlice(name), self.loc);
        if (result_types.len > 0) mlirOperationStateAddResults(&state, @intCast(result_types.len), result_types.ptr);
        if (operands.len > 0) mlirOperationStateAddOperands(&state, @intCast(operands.len), operands.ptr);
        if (attrs.len > 0) mlirOperationStateAddAttributes(&state, @intCast(attrs.len), attrs.ptr);
        const operation = mlirOperationCreate(&state);
        mlirBlockAppendOwnedOperation(block, operation);
        if (result_types.len > 0) return mlirOperationGetResult(operation, 0);
        return Value{ .ptr = null };
    }

    /// Emit a terminator op with successor blocks (cir.br, cir.condbr).
    pub fn emitBranch(self: Builder, block: Block, name: []const u8, operands: []const Value, successors: []const Block) void {
        var state = mlirOperationStateGet(StringRef.fromSlice(name), self.loc);
        if (operands.len > 0) mlirOperationStateAddOperands(&state, @intCast(operands.len), operands.ptr);
        if (successors.len > 0) mlirOperationStateAddSuccessors(&state, @intCast(successors.len), successors.ptr);
        const operation = mlirOperationCreate(&state);
        mlirBlockAppendOwnedOperation(block, operation);
    }

    pub fn createBlock(self: Builder, arg_types: []const Type) Block {
        var locs_buf: [64]Location = undefined;
        for (0..arg_types.len) |j| locs_buf[j] = self.loc;
        return mlirBlockCreate(@intCast(arg_types.len), if (arg_types.len > 0) arg_types.ptr else undefined, if (arg_types.len > 0) &locs_buf else undefined);
    }

    pub fn createFunc(self: Builder, module: Module, name: []const u8, param_types: []const Type, return_types: []const Type) struct { func_op: Operation, entry_block: Block } {
        const func_type = mlirFunctionTypeGet(self.ctx, @intCast(param_types.len), if (param_types.len > 0) param_types.ptr else undefined, @intCast(return_types.len), if (return_types.len > 0) return_types.ptr else undefined);
        const region = mlirRegionCreate();
        var locs_buf: [64]Location = undefined;
        for (0..param_types.len) |j| locs_buf[j] = self.loc;
        const entry_block = mlirBlockCreate(@intCast(param_types.len), if (param_types.len > 0) param_types.ptr else undefined, if (param_types.len > 0) &locs_buf else undefined);
        mlirRegionAppendOwnedBlock(region, entry_block);
        var state = mlirOperationStateGet(StringRef.fromSlice("func.func"), self.loc);
        mlirOperationStateAddOwnedRegions(&state, 1, &[_]Region{region});
        const attrs = [_]NamedAttribute{ self.attr("sym_name", self.strAttr(name)), self.attr("function_type", self.typeAttr(func_type)) };
        mlirOperationStateAddAttributes(&state, attrs.len, &attrs);
        const func_op = mlirOperationCreate(&state);
        mlirBlockAppendOwnedOperation(mlirModuleGetBody(module), func_op);
        return .{ .func_op = func_op, .entry_block = entry_block };
    }

    /// Emit cir.struct_init with variadic field operands and struct result type.
    pub fn emitStructInit(self: Builder, block: Block, struct_type: Type, field_values: []const Value) Value {
        return self.emit(block, "cir.struct_init", &.{struct_type}, field_values, &.{});
    }
};
